Correctif sur fichier menu, reduction font size sur les span dans @media Tablette (768-1239px) pour aligner le text avant hover

--- a/menu-main.scss
+++ b/menu-main.scss
@@ -315,6 +315,10 @@ header {
       .menu__plats,
       .menu__deserts {
         width: 40%;
+        .label__menu p span {
+          font-size: 12px;
+        }
+
       }
       .menu__plats,
       .menu__deserts {
